# motor

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  README.md  cabal.project  default.nix  motor.cabal  publish-hackage.sh  shell.nix  stack.yaml
motor/: CHANGELOG.md  README.md  default.nix  motor.cabal  publish-haddock-docs.sh
motor-diagrams/: Makefile  README.md  default.nix  motor-diagrams.cabal
motor-diagrams/diagrams/: GenerateDiagram.hs  Main.hs  game.uml.txt  styles.iuml
motor-diagrams/src/Motor/FSM/: Diagram.hs
motor-diagrams/src/Motor/FSM/Diagram/: TH.hs
motor-diagrams/test/Motor/FSM/: DiagramSpec.hs
motor-reflection/: CHANGELOG.md  README.md  default.nix  motor-reflection.cabal
motor-reflection/src/Motor/FSM/: Reflection.hs
motor-reflection/src/Motor/FSM/Reflection/: Event.hs
motor-reflection/test/Motor/FSM/: ReflectionSpec.hs
motor/examples/: Door.hs
motor/src/Motor/: FSM.hs
motor/src/Motor/FSM/: Class.hs  Logging.hs  Sugar.hs  TH.hs
motor/test/Motor/: FSMSpec.hs
motor/test/Motor/FSMSpec/: Game.hs
src/Motor/: FSM.hs
src/Motor/FSM/: Class.hs  Logging.hs
test/: Main.hs
test/Motor/FSMSpec/: Game.hs
